--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header">
         <div class="header-name">Upload Files</div>
-        <a href="/gallery/">
+        <a href="gallery/">
             <span class="material-symbols-outlined">
                 folder_open
                 </span>
