--- a/gallery/index.html
+++ b/gallery/index.html
@@ -16,9 +16,16 @@
             </span>
         </a>
     </div>
+    <div class="file-count">
+        <div class="my-img">
+        <h1>My Images</h1>
+    </div>
+        <div id="image-count"></div>
+    </div>
     <div class="img-area">
-    <h1>My Images</h1>
-    <div id="image-gallery"></div>
+    <div id="image-gallery">
+    </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
