--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header">
         <div class="header-name">Upload Files</div>
-        <a href="gallery/">
+        <a href="/gallery/">
             <span class="material-symbols-outlined">
                 folder_open
                 </span>
@@ -31,7 +31,7 @@
                 </span>
             </div>
             
-            <div class="upload-text">Choose a photo video <br> or allow camera</div>
+            <div class="upload-text">Choose an image .jpg .png <br> or allow camera</div>
             <img class="image-preview" id="preview-image" src="#" alt="Preview">
         </label>
         <button id="upload-button">
@@ -50,6 +50,20 @@
             <div></div>
         </div>
     </div>
+
+    <hr>
+
+    <div class="about-tool">
+        <h1>About this Storage</h1>
+        <p>This webapp provides free unlimited cloud storage without the need for signup. Here are some key features:</p>
+        <ul>
+          <li>No signup required</li>
+          <li>Unlimited storage space</li>
+          <li>Accessible from any device</li>
+          <li>end to end encryption security</li>
+        </ul>
+      </div>
+      
 
     <script type="text/javascript" src="script.js"></script>
 
